# learn-ai

./: .gitignore  pyproject.toml
docs/: architecture-decisions.md  mvp-features.md  teaching-loop-design.md
src/: cli.py  session.py
src/agent/: __init__.py  prompts.py  tutor.py
src/llm/: __init__.py  base.py  groq_client.py
src/memory/: db.py  profile.py  schema.sql
tests/agent/: test_tutor.py
